--- a/hmonitor/build.xml
+++ b/hmonitor/build.xml
@@ -58,13 +58,12 @@
     shared project settings outside the repo
 
     Things you must configure in ./build.properties or ../project.properties
-    
-    
-   
+
+
     To build the native library (Linux x64 only; build on RHEL5.x for RHEL5 and 6 executables)
     Or to create valid RPMs for vSphere monitoring
-      guest.app.sdk=location-to-a-vsphere-guest-application-sdk
-      jdk.home=directory containing a full JDK, particularly the directory include/linux
+    guest.app.sdk=location-to-a-vsphere-guest-application-sdk
+    jdk.home=directory containing a full JDK, particularly the directory include/linux
 
     To fake the vsphere library (and so have invalid RPMs)
     vsphere.lib.fake=true
@@ -75,7 +74,7 @@
   <property name="hmonitor.project.dir" location="."/>
   <property name="hmonitor.project.parent.dir" location=".."/>
   <property file="build.properties"/>
-  
+
   <!-- 
   Now locate an (optional) project.properties file in the root dir of any availability 
   project.
@@ -85,17 +84,17 @@
   -->
   <property name="availability.project.root.dir" location="${hmonitor.project.parent.dir}"/>
   <property file="${availability.project.root.dir}/project.properties"/>
-  
+
   <!--
   Choose the version number of the project
   -->
-  
+
   <property name="project.version" value="0.1"/>
   <property name="hmonitor.version" value="${project.version}"/>
-  
+
   <!--
-  Read in the library version numbers
-   -->
+ Read in the library version numbers
+  -->
   <property file="libraries.properties"/>
 
   <!-- default target -->
@@ -108,11 +107,11 @@
 
   <!--Jenkins entry point-->
   <target name="jenkins-rpm" depends="clean, gcc, rpm"
-     description="RPM action for Jenkins builds"/>
+    description="RPM action for Jenkins builds"/>
   <target name="jenkins-test" depends="clean, test"
     description="Test target for Jenkins builds"/>
 
-  
+
   <target name="init">
     <macrodef name="newdir">
       <attribute name="name"/>
@@ -123,7 +122,7 @@
       </sequential>
     </macrodef>
 
-   
+
     <!--This is the filename of the monitor file from vsphere-->
     <property name="libappmonitorlib.so" location="${guest.app.sdk}/lib64/libappmonitorlib.so"/>
     <property name="gcc.mode" value="-m64"/>
@@ -570,7 +569,6 @@ again, but it does ensure your machine isn't building with artifacts that no lon
   </target>
 
 
-
   <!-- ========================================================== -->
   <!-- cleanup target -->
   <!-- This MUST work even if clean has already been run; test -->
@@ -736,7 +734,7 @@ again, but it does ensure your machine isn't building with artifacts that no lon
     <copy file="${target.lib.file}" todir="${build.dir}"/>
     <copy file="${target.lib.file}" todir="lib/lib64"/>
     <exec executable="nm">
-      <arg file="${lib.so}" />
+      <arg file="${lib.so}"/>
     </exec>
   </target>
 
@@ -767,8 +765,8 @@ again, but it does ensure your machine isn't building with artifacts that no lon
       <tarfileset dir="target" includes="extras/*.jar"/>
       <tarfileset dir="lib/lib64/" includes="*.so"/>
       <tarfileset file="${lib.so}"/>
-      
-      
+
+
       <!-- scripts-->
       <tarfileset dir="target/scripts" includes="*.sh" filemode="755"/>
       <tarfileset dir="src/main/scripts/chaos" includes="*.sh" filemode="755"/>
@@ -995,9 +993,9 @@ again, but it does ensure your machine isn't building with artifacts that no lon
     <!-- generate fake lib -->
     <echo level="warn">Generating a stub vsphere monitoring lib -the -vsphere RPMs are not valid</echo>
     <!-- create a fake .so-->
-    <property name="vspherefake.so" location="target/lib/vspherefake.so"/>
+    <property name="vspherefake.so" location="target/lib/libappmonitorlib.so"/>
     <touch file="${vspherefake.so}"/>
-    
+
     <!-- then, iff nobody has set this reference up, point it to the fake one-->
     <property name="redist.libappmonitorlib.so" location="${vspherefake.so}"/>
   </target>
@@ -1013,7 +1011,7 @@ again, but it does ensure your machine isn't building with artifacts that no lon
       Local Monitor directory is ${monitor.d}
     </echo>
     <copy file="${target.jar}" tofile="${monitor.d}/hmonitor.jar"/>
-    
+
     <!--Native Binary -->
     <copy file="${lib.so}" todir="${monitor.d}"/>
 
@@ -1130,7 +1128,7 @@ again, but it does ensure your machine isn't building with artifacts that no lon
     <delete file="${hmonitor-vsphere-jobtracker-daemon.rpm}"/>
     <delete file="${hmonitor-vsphere-namenode-daemon.rpm}"/>
   </target>
-  
+
   <target name="rpm" depends="copy-dependencies, exec-rpm, purge-stub-rpms"
     description="build the project and create the RPM">
 
