--- a/hmonitor/src/main/scripts/rpm/rpm.properties
+++ b/hmonitor/src/main/scripts/rpm/rpm.properties
@@ -19,11 +19,11 @@
 #by the user at build time.
 
 #release counter
-rpm.release.counter=12
+#rpm.release.counter=12
 #platform this RPM targets
-rpm.distribution=el5
+#rpm.distribution=el5
 #the full release version combines the counter and target platform
-rpm.release.version=${rpm.release.counter}.${rpm.distribution}
+#rpm.release.version=${rpm.release.counter}
 
 #what category to use for this RPM
 #this must be one of those in /usr/share/doc/rpm/GROUPS
