make test SSH key path explicit

--- a/hmonitor/src/test/targets/rhel6ha.properties
+++ b/hmonitor/src/test/targets/rhel6ha.properties
@@ -41,6 +41,7 @@ test.remote.namenode.pidfile=/var/run/hadoop/hdfs/hadoop-hdfs-namenode.pid
 test.remote.namenode.start.time=180000
 test.remote.namenode.monitored.stop.time=360000
 test.ham.configuration=src/test/targets/rhel6ha/ham.xml
+test.remote.ssh.key=${user.home}/.ssh/id_rsa
 
 
 #NN is 
