--- a/hmonitor/src/test/targets/rhel58-nn.properties
+++ b/hmonitor/src/test/targets/rhel58-nn.properties
@@ -40,6 +40,7 @@ test.remote.namenode.pidfile=/var/run/hadoop/hdfs/hadoop-hdfs-namenode.pid
 test.remote.namenode.start.time=180000
 test.remote.namenode.monitored.stop.time=360000
 test.ham.configuration=src/test/targets/rhel58-nn/rhel58-nn.xml
+test.remote.ssh.key=${user.home}/.ssh/id_rsa
 
 
 #NN is 
