--- a/hmonitor/src/main/resources/log4j.properties
+++ b/hmonitor/src/main/resources/log4j.properties
@@ -19,7 +19,7 @@ log4j.rootCategory=INFO,STDOUT
 #log4j.rootCategory=INFO,COLOR
 log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT.layout=org.apache.log4j.PatternLayout
-log4j.appender.STDOUT.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] %p %c{2} %x: %m%n
+log4j.appender.STDOUT.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] %p %c %x: %m%n
 
 
 #Hadoop internal options, a mix of debugging and disabling over-chatty messages
