--- a/hmonitor/libraries.properties
+++ b/hmonitor/libraries.properties
@@ -21,7 +21,7 @@
 
 # This is the version of hadoop we depend on
 #hadoop.version=1.0.3-HA
-hadoop.version=1.0.3.15
+hadoop.version=2.0.0-mr1-cdh4.1.2
 hadoop-gpl-compression.version=0.1.0
 
 #These are the versions of our dependencies (in alphabetical order)
