fix bug of scripte

--- a/hmonitor/build.xml
+++ b/hmonitor/build.xml
@@ -70,6 +70,8 @@
     vsphere.lib.fake=true
   </description>
 
+  <!-- private values -->
+  <property name="guest.app.sdk" location="/home/hadoop/data/GuestSDK/lib" />
 
   <!-- load in build properties; set the project dir first-->
   <property name="hmonitor.project.dir" location="."/>
